# AI-Driven-Sales-Call-System

./: README.md
backend/: .env  main.py  pyproject.toml  requirements.txt
backend/backend/: model.ipynb  model.py
